fix: hide overflow

--- a/client/src/components/Statistics.css
+++ b/client/src/components/Statistics.css
@@ -18,7 +18,7 @@
   background: white;
   border-radius: 20px;
   padding: 5px;
-  /* overflow: scroll; */
+  overflow-y: hidden;
 }
 .StatisticsTable2 {
   float: left;
@@ -31,6 +31,10 @@
   background: white;
   border-radius: 20px;
   padding: 5px;
+}
+
+.operatorButton {
+  cursor: pointer;
 }
 
 ul a:link {
